<resources>
    <string name="app_name">MyVK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="friends">Friends</string>
    <string name="dialogs">Dialogs</string>
    <string name="audios">Audios</string>
    <string name="groups">Groups</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="text_wall_photos">wall photos</string>
    <string name="text_profile_photos">profile photos</string>
    <string name="text_saved_photos">saved photos</string>
    <string name="text_set_id">Set ID</string>
    <string name="title_wall_photos">Wall photos</string>
    <string name="title_profile_photos">Profile photos</string>
    <string name="title_saved_photos">Saved photos</string>
</resources>
