<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photos" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/videos" />

    <Button
        android:id="@+id/button_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogs" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/groups" />

    <Button
        android:id="@+id/button_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audios" />

</LinearLayout>
